<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:background="@color/back">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:contentDescription="@string/calculatorimage"
            android:layout_height="100dp"
            app:srcCompat="@drawable/backimage"
            android:layout_marginStart="130dp"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:ems="10"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/textcolor"
            android:layout_marginStart="80dp"
            android:hint="@string/enter_number_a"
            android:autofillHints="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:ems="10"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:hint="@string/enter_number_b"
            android:autofillHints="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/backbutton"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/backbutton"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/backbutton"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/backbutton"
            android:text="@string/division"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/backbutton"
            android:text="@string/modular"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/pow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/backbutton"
            android:text="@string/ab"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/gcd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/backbutton"
            android:text="@string/gcd"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/lcm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/backbutton"
            android:text="@string/lcm"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/modinv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/backbutton"
            android:text="@string/modinv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>



